--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
-    "seed": "node server/datagen.js",
+    "start:dev": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "seed": "",
     "test": "jest",
-    "build": "webpack -d --watch"
+    "build:dev": "webpack -d --watch",
+    "build": "webpack -d"
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
