--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
+    "file-system": "^2.2.2",
     "identity-obj-proxy": "^3.0.0",
     "jest-sinon": "^1.0.4",
     "jquery": "^3.5.1",
