--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-sinon": "^1.0.4",
     "jquery": "^3.5.1",
-    "nodemon": "^2.0.4",
+    "newrelic": "^6.13.0",
+    "pg": "^8.3.3",
+    "pg-promise": "^10.6.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "react": "^16.13.1",
@@ -57,6 +59,7 @@
     "css-loader": "^4.2.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^26.2.2",
+    "nodemon": "^2.0.4",
     "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
