--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "scripts": {
     "start:dev": "nodemon server/index.js",
     "start": "node server/index.js",
-    "seed": "node server/seed.js --entries 10000000 --output server/listingImageData.csv",
-    "seed:test": "node server/seed.js --entries 10 --output server/testListingImageData.csv",
+    "seed": "node database/seed.js --entries 10000000 --output server/listingImageData.csv",
+    "seed:test": "node database/seed.js --entries 10 --output server/testListingImageData.csv",
     "test": "jest",
     "build:dev": "webpack -d --watch",
     "build": "webpack -d",
-    "stress": "artillery run database/serverStressTesting.yml"
+    "stress": "artillery run database/serviceStressTesting.yml"
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
